Updated Edit , Added Delete Functionality

--- a/server/views/books/index.ejs
+++ b/server/views/books/index.ejs
@@ -35,7 +35,7 @@
                     <!-- ------------------------ -->
                     <!-- EDIT BUTTON -->
                     <!-- ------------------------ -->
-                    <a href="/books/edit/<%= books[count]._id %>"
+                    <a href="/books/<%= books[count]._id %>"
                     class="btn btn-primary"><i class="fa fa-pencil"></i> Edit</a>
                     
                   </td>
