--- a/server/views/books/details.ejs
+++ b/server/views/books/details.ejs
@@ -1,6 +1,9 @@
+<!-- Details - EJS File -->
+
 <% include ../partials/header.ejs %>
 
-   <!-- MAIN CONTENT FOR BOOK DETAILS-->
+   <!-- MAIN CONTENT FOR ADD, EDIT BOOK DETAILS WITH VALUE FIELD -->
+
    <div class="container">
       <div class="row">
         <div class="col-md-offset-3 col-md-6">
