--- a/server/views/auth/register.ejs
+++ b/server/views/auth/register.ejs
@@ -1,5 +1,8 @@
+<!-- Auth - Register - EJS File -->
+
 <% include ../partials/header.ejs %>
 
+<!-- MAIN CONTENT FOR REGISTER PAGE -->
 <main class="container">
         <% if(messages.length > 0) { %>
             <div class="alert alert-danger">
