--- a/server/views/partials/header.ejs
+++ b/server/views/partials/header.ejs
@@ -41,7 +41,7 @@
             </i> Books List</a></li>
           <% } %>
 
-<!-- Welcome message, Login and Logout Button -->
+<!-- Logged in user's name, Login/Logout Button -->
             <% if(typeof displayName == 'string' && displayName) { %>
                 <li class="navbar-text"><i class="fa fa-user fa-lg"></i> Welcome - <%= displayName %></li>
                 <li class="nav-item"><a class="nav-link" href="/logout"><i class="fa fa-sign-out fa-lg" style="color:red"></i> Logout</a></li>
